Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -3,90 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Shubham Jawalkar | MIS Executive</title>
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="hero">
-    <h1>Shubham Jawalkar</h1>
-    <h2>MIS Executive & Campaign Coordinator</h2>
-    <p>Pune, Maharashtra | Data • Reporting • Automation</p>
-    <a href="assets/Shubham_Jawalkar_Resume.pdf" class="btn" download>Download Resume</a>
-</header>
+<div class="container">
 
-<section class="section">
-    <h3>Professional Summary</h3>
-    <p>
-        MIS Executive & Operations professional with over 2.5 years of experience in reporting,
-        analytics, automation, and operational support. Skilled in transforming raw data into
-        actionable insights through Excel, VBA, and SQL. Experienced in KPI monitoring, SLA tracking,
-        campaign analytics, and delivering client-ready reports.
-    </p>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <div class="hero-left">
+            <img src="assets/profile.jpg" alt="Shubham Jawalkar">
+        </div>
+        <div class="hero-right">
+            <h1>Shubham Jawalkar</h1>
+            <h2>MIS Executive & Campaign Coordinator</h2>
+            <p>
+                MIS & Operations professional with 2.5+ years of experience in reporting,
+                analytics, automation, and campaign performance tracking.
+                Skilled in Excel, VBA, SQL, and Power BI to convert data into insights.
+            </p>
+            <a href="assets/Shubham_Jawalkar_Resume.pdf" class="btn" download>
+                Download Resume
+            </a>
+        </div>
+    </section>
 
-<section class="section">
-    <h3>Skills</h3>
-    <div class="skills">
-        <ul>
-            <li>MIS Reporting & Data Analysis</li>
-            <li>KPI & SLA Tracking</li>
-            <li>ROI Analysis & Data Visualization</li>
-            <li>Advanced MS Excel (Pivot, VLOOKUP, Macros)</li>
-            <li>Power BI & Microsoft Access</li>
-            <li>VBA Automation & SQL</li>
-            <li>Campaign Analytics & Client Reporting</li>
-            <li>Workflow Optimization & Team Coordination</li>
-        </ul>
-    </div>
-</section>
+    <!-- SKILLS -->
+    <section>
+        <h3>Skills</h3>
+        <div class="grid">
+            <div class="card">MIS Reporting & KPI Tracking</div>
+            <div class="card">Advanced Excel (Pivot, Macros)</div>
+            <div class="card">VBA Automation & SQL</div>
+            <div class="card">Power BI & Dashboards</div>
+            <div class="card">Campaign Analytics & ROI</div>
+            <div class="card">Client Reporting & SLA</div>
+        </div>
+    </section>
 
-<section class="section">
-    <h3>Professional Experience</h3>
+    <!-- EXPERIENCE -->
+    <section>
+        <h3>Experience</h3>
 
-    <div class="card">
-        <h4>Campaign Coordinator</h4>
-        <span>Candorworks Pvt. Ltd | Apr 2024 – Present</span>
-        <ul>
-            <li>Designed dashboards to monitor campaign KPIs, SLAs, and ROI.</li>
-            <li>Automated MIS reports using VBA and SQL, saving ~40 minutes per report.</li>
-            <li>Analyzed campaign data to identify trends and improve targeting.</li>
-            <li>Prepared client-facing reports and presentations.</li>
-            <li>Coordinated with cross-functional teams for timely data delivery.</li>
-        </ul>
-    </div>
+        <div class="timeline">
+            <h4>Campaign Coordinator</h4>
+            <span>Candorworks Pvt. Ltd | Apr 2024 – Present</span>
+            <ul>
+                <li>Built KPI & SLA dashboards for campaign monitoring</li>
+                <li>Automated MIS reports using VBA & SQL</li>
+                <li>Reduced reporting time by ~40 minutes per report</li>
+                <li>Prepared client-ready reports and insights</li>
+            </ul>
+        </div>
 
-    <div class="card">
-        <h4>MIS Executive</h4>
-        <span>Candorworks Pvt. Ltd | May 2023 – Apr 2024</span>
-        <ul>
-            <li>Delivered campaign and lead reports as per client requirements.</li>
-            <li>Maintained campaign-wise lead availability trackers.</li>
-            <li>Prepared delivery reports using advanced Excel functions.</li>
-            <li>Tracked daily lead generation and CRM updates.</li>
-        </ul>
-    </div>
-</section>
+        <div class="timeline">
+            <h4>MIS Executive</h4>
+            <span>Candorworks Pvt. Ltd | May 2023 – Apr 2024</span>
+            <ul>
+                <li>Prepared daily & monthly delivery reports</li>
+                <li>Maintained campaign-wise lead trackers</li>
+                <li>Worked with advanced Excel formulas & pivots</li>
+            </ul>
+        </div>
+    </section>
 
-<section class="section">
-    <h3>Education</h3>
+    <!-- EDUCATION -->
+    <section>
+        <h3>Education</h3>
+        <div class="timeline">
+            <h4>BBA – Computer Applications</h4>
+            <span>Savitribai Phule Pune University | 2022 – 2025</span>
+        </div>
+        <div class="timeline">
+            <h4>HSC & SSC</h4>
+            <span>Maharashtra State Board | 2017 – 2020</span>
+        </div>
+    </section>
 
-    <div class="card">
-        <h4>BBA – Computer Applications</h4>
-        <span>Savitribai Phule Pune University | 2022 – 2025</span>
-    </div>
+    <!-- FOOTER -->
+    <footer>
+        <p>📧 shubhamjawalkar9021@gmail.com</p>
+        <p>📍 Pune, Maharashtra</p>
+    </footer>
 
-    <div class="card">
-        <h4>HSC & SSC</h4>
-        <span>Maharashtra State Board | 2017 – 2020</span>
-    </div>
-</section>
-
-<footer class="footer">
-    <h3>Contact</h3>
-    <p>📧 shubhamjawalkar9021@gmail.com</p>
-    <p>📍 Pune, Maharashtra</p>
-</footer>
+</div>
 
 </body>
 </html>
