--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <div class="container">
 
     <!-- HERO -->
-    <section class="hero">
-        <div class="hero-left">
-            <img src="assets/profile.jpg" alt="Shubham Jawalkar">
-        </div>
+   <div class="hero-left">
+    <img src="assets/profile.jpg" alt="Shubham Jawalkar">
+
+    <div class="social-links">
+        <a href="www.linkedin.com/in/shubham-jawalkar-6bba33225" target="_blank" title="LinkedIn">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+        </a>
+    </div>
+</div>
+
         <div class="hero-right">
             <h1>Shubham Jawalkar</h1>
             <h2>MIS Executive & Campaign Coordinator</h2>
