--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <img src="assets/profile.jpg" alt="Shubham Jawalkar">
 
     <div class="social-links">
-        <a href="www.linkedin.com/in/shubham-jawalkar-6bba33225" target="_blank" title="LinkedIn">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
-        </a>
+    <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" 
+             alt="LinkedIn">
+    </a>
     </div>
-</div>
 
         <div class="hero-right">
             <h1>Shubham Jawalkar</h1>
