Refactor hero section and update footer layout

--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 
 <div class="container">
 
-    <!-- HERO -->
-   <div class="hero-left">
-    <img src="assets/profile.jpg" alt="Shubham Jawalkar">
+    <!-- HERO SECTION -->
+    <section class="hero">
 
-    <div class="social-links">
-    <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225" 
-       target="_blank" 
-       rel="noopener noreferrer"
-       title="LinkedIn">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" 
-             alt="LinkedIn">
-    </a>
-    </div>
+        <div class="hero-left">
+            <img src="assets/profile.jpg" alt="Shubham Jawalkar">
+
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225"
+                   target="_blank"
+                   rel="noopener noreferrer"
+                   title="LinkedIn">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
+                         alt="LinkedIn">
+                </a>
+            </div>
+        </div>
 
         <div class="hero-right">
             <h1>Shubham Jawalkar</h1>
@@ -36,6 +39,7 @@
                 Download Resume
             </a>
         </div>
+
     </section>
 
     <!-- SKILLS -->
@@ -80,10 +84,12 @@
     <!-- EDUCATION -->
     <section>
         <h3>Education</h3>
+
         <div class="timeline">
             <h4>BBA – Computer Applications</h4>
             <span>Savitribai Phule Pune University | 2022 – 2025</span>
         </div>
+
         <div class="timeline">
             <h4>HSC & SSC</h4>
             <span>Maharashtra State Board | 2017 – 2020</span>
@@ -92,10 +98,10 @@
 
     <!-- FOOTER -->
     <footer>
-    <p>📞 +91 90211 60556</p>
-    <p>📧 shubhamjawalkar9021@gmail.com</p>
-    <p>📍 Pune, Maharashtra</p>
-</footer>
+        <p>📞 +91 90211 60556</p>
+        <p>📧 shubhamjawalkar9021@gmail.com</p>
+        <p>📍 Pune, Maharashtra</p>
+    </footer>
 
 </div>
 
