Revise professional summary in index.html
Updated professional summary to highlight experience and skills in data transformation, KPI monitoring, and operational support.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <h1>Shubham Jawalkar</h1>
             <h2>MIS Executive & Campaign Coordinator</h2>
             <p>
-                MIS & Operations professional with 2.5+ years of experience in reporting,
-                analytics, automation, and campaign performance tracking.
-                Skilled in Excel, VBA, SQL, and Power BI to convert data into insights.
+                MIS Executive & Operations experience with over 2.5 years of experience combining focus on reporting,
+analytics, automation and team leadership and operational support. Skilled in transforming raw data into
+actionable business insights through Excel, VBA automation& MSSQL. Adept at KPI monitoring, SLA tracking,
+campaign analytics, and delivering client-ready reports that drive process improvements and decision-making
+efficiency.
             </p>
             <a href="assets/Shubham_Jawalkar_Resume.pdf" class="btn" download>
                 Download Resume
