Enhance footer with social links and contact details
Added social media links and updated contact information in the footer.

--- a/index.html
+++ b/index.html
@@ -100,10 +100,29 @@ efficiency.
 
     <!-- FOOTER -->
     <footer>
-        <p>📞 +91 90211 60556</p>
-        <p>📧 shubhamjawalkar9021@gmail.com</p>
-        <p>📍 Pune, Maharashtra</p>
-    </footer>
+    <div class="footer-social">
+        <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225"
+           target="_blank"
+           rel="noopener noreferrer"
+           title="LinkedIn">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
+                 alt="LinkedIn">
+        </a>
+
+        <a href="https://github.com/shubhamjawalkar"
+           target="_blank"
+           rel="noopener noreferrer"
+           title="GitHub">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+                 alt="GitHub">
+        </a>
+    </div>
+
+    <p>📞 <a href="tel:+919021160556">+91 90211 60556</a></p>
+    <p>📧 <a href="mailto:shubhamjawalkar9021@gmail.com">shubhamjawalkar9021@gmail.com</a></p>
+    <p>📍 Pune, Maharashtra</p>
+</footer>
+
 
 </div>
 
