--- a/index.html
+++ b/index.html
@@ -89,6 +89,40 @@ efficiency.
         </div>
     </section>
 
+    <!-- PROJECTS -->
+<section>
+    <h3>Projects</h3>
+
+    <div class="grid">
+        <div class="card project-card">
+            <h4>MIS Automation Dashboard</h4>
+            <p>
+                Built automated MIS dashboards using Excel, VBA, and SQL
+                to track KPIs, SLAs, and campaign performance.
+            </p>
+            <span>Tools: Excel, VBA, SQL</span>
+        </div>
+
+        <div class="card project-card">
+            <h4>Campaign Performance Tracker</h4>
+            <p>
+                Designed campaign-wise tracking system to monitor lead
+                delivery, availability, and ROI for multiple clients.
+            </p>
+            <span>Tools: Excel, Power BI</span>
+        </div>
+
+        <div class="card project-card">
+            <h4>Lead Reporting & Validation System</h4>
+            <p>
+                Created structured reporting workflow for valid/invalid leads
+                and client delivery compliance.
+            </p>
+            <span>Tools: Excel, SQL</span>
+        </div>
+    </div>
+</section>
+
     <!-- FOOTER -->
     <footer>
     <div class="footer-social">
