--- a/index.html
+++ b/index.html
@@ -93,15 +93,42 @@ efficiency.
 <section>
     <h3>Projects</h3>
 
+   <!-- PROJECTS -->
+<section>
+    <h3>Projects</h3>
+
     <div class="grid">
+
         <div class="card project-card">
-            <h4>MIS Automation Dashboard</h4>
+            <h4>Excel VBA Automation – Mini Data Entry & Management System</h4>
+
             <p>
-                Built automated MIS dashboards using Excel, VBA, and SQL
-                to track KPIs, SLAs, and campaign performance.
+                Developed a smart Excel VBA–based data entry and record management system
+                designed for startups and small businesses. The solution transforms Excel
+                into a mini ERP-like tool with a focus on automation, accuracy, and data security.
             </p>
-            <span>Tools: Excel, VBA, SQL</span>
+
+            <ul>
+                <li>Secure and confidential record management using VBA UserForms</li>
+                <li>Auto-generation of unique Purchase IDs with zero duplication</li>
+                <li>Quick search and edit functionality using Purchase ID</li>
+                <li>Dynamic dropdown lists populated directly from the database</li>
+                <li>Export functionality to PDF and CSV for reports and invoices</li>
+                <li>Password-protected login system for enhanced data security</li>
+            </ul>
+
+            <p>
+                The project demonstrates how Excel combined with VBA automation can deliver
+                enterprise-style process automation without expensive software, making it
+                highly suitable for MIS operations and MSMEs.
+            </p>
+
+            <span>Tools: MS Excel, VBA (Macros), UserForms, CSV/PDF Export</span>
         </div>
+
+    </div>
+</section>
+
 
         <div class="card project-card">
             <h4>Campaign Performance Tracker</h4>
