--- a/index.html
+++ b/index.html
@@ -130,24 +130,71 @@ efficiency.
 </section>
 
 
-        <div class="card project-card">
-            <h4>Campaign Performance Tracker</h4>
-            <p>
-                Designed campaign-wise tracking system to monitor lead
-                delivery, availability, and ROI for multiple clients.
-            </p>
-            <span>Tools: Excel, Power BI</span>
-        </div>
+       <div class="card project-card">
+    <h4>Sales Performance Analytics Dashboard (FTD & MTD)</h4>
 
-        <div class="card project-card">
-            <h4>Lead Reporting & Validation System</h4>
-            <p>
-                Created structured reporting workflow for valid/invalid leads
-                and client delivery compliance.
-            </p>
-            <span>Tools: Excel, SQL</span>
-        </div>
-    </div>
+    <p>
+        Designed an interactive performance analytics dashboard to track
+        First-To-Date (FTD) and Month-To-Date (MTD) sales metrics, helping
+        leadership teams quickly understand performance trends and take
+        data-driven decisions.
+    </p>
+
+    <ul>
+        <li>Real-time regional sales performance breakdown</li>
+        <li>Clear identification of top and bottom performers</li>
+        <li>Automated calculation of averages and performance variance</li>
+        <li>Visual sales trends for faster and clearer decision-making</li>
+        <li>Structured MIS reporting with minimal manual effort</li>
+    </ul>
+
+    <p>
+        This dashboard converts raw sales numbers into clear, actionable
+        business insights, enabling stakeholders to focus on performance gaps,
+        opportunities, and growth strategies.
+    </p>
+
+    <span>Tools: MS Excel, Advanced Formulas, Pivot Tables, Data Visualization</span>
+</div>
+
+</section>
+
+       <div class="card project-card">
+    <h4>Microsoft Leads Packaging Automation</h4>
+    <span>Nov 2024 – Dec 2024 | Savitribai Phule Pune University</span>
+
+    <p>
+        Designed and developed a VBA-based automation solution to streamline
+        the packaging and delivery of Microsoft leads in client-specific
+        template formats. The system automates the transformation of raw lead
+        data into standardized, client-ready delivery files with minimal
+        manual effort.
+    </p>
+
+    <h5>Process Flow</h5>
+    <ul>
+        <li>Raw lead data is pasted into a structured input database sheet</li>
+        <li>VBA scripts clean, validate, and organize data based on predefined rules</li>
+        <li>Automated transformation aligns data with client-approved templates</li>
+        <li>Final output is generated in a new sheet or file matching client format</li>
+    </ul>
+
+    <h5>Key Benefits</h5>
+    <ul>
+        <li>Significant reduction in time spent on manual data formatting</li>
+        <li>Improved accuracy by eliminating manual processing errors</li>
+        <li>Consistent lead delivery aligned with client template standards</li>
+        <li>User-friendly workflow requiring minimal technical expertise</li>
+    </ul>
+
+    <p>
+        This automation ensures faster, more accurate, and consistent lead
+        delivery, helping teams meet client requirements efficiently while
+        improving overall MIS and operational productivity.
+    </p>
+
+    <span>Tools: MS Excel, VBA (Macros), Data Transformation, Template Automation</span>
+</div>
 </section>
 
     <!-- FOOTER -->
