--- a/index.html
+++ b/index.html
@@ -12,27 +12,24 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-
         <div class="hero-left">
             <img src="assets/profile.jpg" alt="Shubham Jawalkar">
-
-            </div>
+        </div>
 
         <div class="hero-right">
             <h1>Shubham Jawalkar</h1>
             <h2>MIS Executive & Campaign Coordinator</h2>
             <p>
                 MIS Executive & Operations experience with over 2.5 years of experience combining focus on reporting,
-analytics, automation and team leadership and operational support. Skilled in transforming raw data into
-actionable business insights through Excel, VBA automation& MSSQL. Adept at KPI monitoring, SLA tracking,
-campaign analytics, and delivering client-ready reports that drive process improvements and decision-making
-efficiency.
+                analytics, automation and team leadership and operational support. Skilled in transforming raw data into
+                actionable business insights through Excel, VBA automation & MSSQL. Adept at KPI monitoring, SLA tracking,
+                campaign analytics, and delivering client-ready reports that drive process improvements and decision-making
+                efficiency.
             </p>
             <a href="assets/Shubham_Jawalkar_Resume.pdf" class="btn" download>
                 Download Resume
             </a>
         </div>
-
     </section>
 
     <!-- SKILLS -->
@@ -89,135 +86,124 @@ efficiency.
         </div>
     </section>
 
-   <!-- PROJECTS -->
-<section>
-    <h3>Projects</h3>
+    <!-- PROJECTS -->
+    <section>
+        <h3>Projects</h3>
 
-    <div class="grid">
+        <div class="projects-grid">
 
-        <div class="card project-card">
-            <h4>Excel VBA Automation – Mini Data Entry & Management System</h4>
+            <!-- PROJECT 1 -->
+            <div class="card project-card">
+                <h4>Excel VBA Automation – Mini Data Entry & Management System</h4>
 
-            <p>
-                Developed a smart Excel VBA–based data entry and record management system
-                designed for startups and small businesses. The solution transforms Excel
-                into a mini ERP-like tool with a focus on automation, accuracy, and data security.
-            </p>
+                <p>
+                    Developed a smart Excel VBA–based data entry and record management system
+                    designed for startups and small businesses. The solution transforms Excel
+                    into a mini ERP-like tool with a focus on automation, accuracy, and data security.
+                </p>
 
-            <ul>
-                <li>Secure and confidential record management using VBA UserForms</li>
-                <li>Auto-generation of unique Purchase IDs with zero duplication</li>
-                <li>Quick search and edit functionality using Purchase ID</li>
-                <li>Dynamic dropdown lists populated directly from the database</li>
-                <li>Export functionality to PDF and CSV for reports and invoices</li>
-                <li>Password-protected login system for enhanced data security</li>
-            </ul>
+                <ul>
+                    <li>Secure and confidential record management using VBA UserForms</li>
+                    <li>Auto-generation of unique Purchase IDs with zero duplication</li>
+                    <li>Quick search and edit functionality using Purchase ID</li>
+                    <li>Dynamic dropdown lists populated directly from the database</li>
+                    <li>Export functionality to PDF and CSV for reports and invoices</li>
+                    <li>Password-protected login system for enhanced data security</li>
+                </ul>
 
-            <p>
-                The project demonstrates how Excel combined with VBA automation can deliver
-                enterprise-style process automation without expensive software, making it
-                highly suitable for MIS operations and MSMEs.
-            </p>
+                <p>
+                    The project demonstrates how Excel combined with VBA automation can deliver
+                    enterprise-style process automation without expensive software, making it
+                    highly suitable for MIS operations and MSMEs.
+                </p>
 
-            <span>Tools: MS Excel, VBA (Macros), UserForms, CSV/PDF Export</span>
+                <span>Tools: MS Excel, VBA (Macros), UserForms, CSV/PDF Export</span>
+            </div>
+
+            <!-- PROJECT 2 -->
+            <div class="card project-card">
+                <h4>Sales Performance Analytics Dashboard (FTD & MTD)</h4>
+
+                <p>
+                    Designed an interactive performance analytics dashboard to track
+                    First-To-Date (FTD) and Month-To-Date (MTD) sales metrics, helping
+                    leadership teams quickly understand performance trends and take
+                    data-driven decisions.
+                </p>
+
+                <ul>
+                    <li>Real-time regional sales performance breakdown</li>
+                    <li>Clear identification of top and bottom performers</li>
+                    <li>Automated calculation of averages and performance variance</li>
+                    <li>Visual sales trends for faster and clearer decision-making</li>
+                    <li>Structured MIS reporting with minimal manual effort</li>
+                </ul>
+
+                <p>
+                    This dashboard converts raw sales numbers into clear, actionable
+                    business insights, enabling stakeholders to focus on performance gaps,
+                    opportunities, and growth strategies.
+                </p>
+
+                <span>Tools: MS Excel, Advanced Formulas, Pivot Tables, Data Visualization</span>
+            </div>
+
+            <!-- PROJECT 3 -->
+            <div class="card project-card">
+                <h4>Microsoft Leads Packaging Automation</h4>
+                <span>Nov 2024 – Dec 2024 | Savitribai Phule Pune University</span>
+
+                <p>
+                    Designed and developed a VBA-based automation solution to streamline
+                    the packaging and delivery of Microsoft leads in client-specific
+                    template formats. The system automates the transformation of raw lead
+                    data into standardized, client-ready delivery files with minimal
+                    manual effort.
+                </p>
+
+                <h5>Process Flow</h5>
+                <ul>
+                    <li>Raw lead data is pasted into a structured input database sheet</li>
+                    <li>VBA scripts clean, validate, and organize data based on predefined rules</li>
+                    <li>Automated transformation aligns data with client-approved templates</li>
+                    <li>Final output is generated in a new sheet or file matching client format</li>
+                </ul>
+
+                <h5>Key Benefits</h5>
+                <ul>
+                    <li>Significant reduction in time spent on manual data formatting</li>
+                    <li>Improved accuracy by eliminating manual processing errors</li>
+                    <li>Consistent lead delivery aligned with client template standards</li>
+                    <li>User-friendly workflow requiring minimal technical expertise</li>
+                </ul>
+
+                <p>
+                    This automation ensures faster, more accurate, and consistent lead
+                    delivery, helping teams meet client requirements efficiently while
+                    improving overall MIS and operational productivity.
+                </p>
+
+                <span>Tools: MS Excel, VBA (Macros), Data Transformation, Template Automation</span>
+            </div>
+
         </div>
-
-    </div>
-</section>
-
-
-       <div class="card project-card">
-    <h4>Sales Performance Analytics Dashboard (FTD & MTD)</h4>
-
-    <p>
-        Designed an interactive performance analytics dashboard to track
-        First-To-Date (FTD) and Month-To-Date (MTD) sales metrics, helping
-        leadership teams quickly understand performance trends and take
-        data-driven decisions.
-    </p>
-
-    <ul>
-        <li>Real-time regional sales performance breakdown</li>
-        <li>Clear identification of top and bottom performers</li>
-        <li>Automated calculation of averages and performance variance</li>
-        <li>Visual sales trends for faster and clearer decision-making</li>
-        <li>Structured MIS reporting with minimal manual effort</li>
-    </ul>
-
-    <p>
-        This dashboard converts raw sales numbers into clear, actionable
-        business insights, enabling stakeholders to focus on performance gaps,
-        opportunities, and growth strategies.
-    </p>
-
-    <span>Tools: MS Excel, Advanced Formulas, Pivot Tables, Data Visualization</span>
-</div>
-
-</section>
-
-       <div class="card project-card">
-    <h4>Microsoft Leads Packaging Automation</h4>
-    <span>Nov 2024 – Dec 2024 | Savitribai Phule Pune University</span>
-
-    <p>
-        Designed and developed a VBA-based automation solution to streamline
-        the packaging and delivery of Microsoft leads in client-specific
-        template formats. The system automates the transformation of raw lead
-        data into standardized, client-ready delivery files with minimal
-        manual effort.
-    </p>
-
-    <h5>Process Flow</h5>
-    <ul>
-        <li>Raw lead data is pasted into a structured input database sheet</li>
-        <li>VBA scripts clean, validate, and organize data based on predefined rules</li>
-        <li>Automated transformation aligns data with client-approved templates</li>
-        <li>Final output is generated in a new sheet or file matching client format</li>
-    </ul>
-
-    <h5>Key Benefits</h5>
-    <ul>
-        <li>Significant reduction in time spent on manual data formatting</li>
-        <li>Improved accuracy by eliminating manual processing errors</li>
-        <li>Consistent lead delivery aligned with client template standards</li>
-        <li>User-friendly workflow requiring minimal technical expertise</li>
-    </ul>
-
-    <p>
-        This automation ensures faster, more accurate, and consistent lead
-        delivery, helping teams meet client requirements efficiently while
-        improving overall MIS and operational productivity.
-    </p>
-
-    <span>Tools: MS Excel, VBA (Macros), Data Transformation, Template Automation</span>
-</div>
-</section>
+    </section>
 
     <!-- FOOTER -->
     <footer>
-    <div class="footer-social">
-        <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225"
-           target="_blank"
-           rel="noopener noreferrer"
-           title="LinkedIn">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
-                 alt="LinkedIn">
-        </a>
+        <div class="footer-social">
+            <a href="https://www.linkedin.com/in/shubham-jawalkar-6bba33225" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg">
+            </a>
+            <a href="https://github.com/shubhamjawalkar" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg">
+            </a>
+        </div>
 
-        <a href="https://github.com/shubhamjawalkar"
-           target="_blank"
-           rel="noopener noreferrer"
-           title="GitHub">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
-                 alt="GitHub">
-        </a>
-    </div>
-
-    <p>📞 <a href="tel:+919021160556">+91 90211 60556</a></p>
-    <p>📧 <a href="mailto:shubhamjawalkar9021@gmail.com">shubhamjawalkar9021@gmail.com</a></p>
-    <p>📍 Pune, Maharashtra</p>
-</footer>
-
+        <p>📞 <a href="tel:+919021160556">+91 90211 60556</a></p>
+        <p>📧 <a href="mailto:shubhamjawalkar9021@gmail.com">shubhamjawalkar9021@gmail.com</a></p>
+        <p>📍 Pune, Maharashtra</p>
+    </footer>
 
 </div>
 
