Integrate Google Analytics and visitor counter
Added Google Analytics tracking code and visitor counter.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Shubham Jawalkar | MIS Executive</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7X0MT14HMH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7X0MT14HMH');
+</script>
 </head>
 <body>
 
@@ -203,6 +212,10 @@
         <p>📞 <a href="tel:+919021160556">+91 90211 60556</a></p>
         <p>📧 <a href="mailto:shubhamjawalkar9021@gmail.com">shubhamjawalkar9021@gmail.com</a></p>
         <p>📍 Pune, Maharashtra</p>
+        <p>👁️ Visitors:
+<img src="https://hitwebcounter.com/counter/counter.php?page=123456&style=0006&nbdigits=5&type=page&initCount=0">
+</p>
+
     </footer>
 
 </div>
