--- a/index.html
+++ b/index.html
@@ -41,17 +41,36 @@
         </div>
     </section>
 
-    <!-- SKILLS -->
-    <section>
         <h3>Skills</h3>
-        <div class="grid">
-            <div class="card">MIS Reporting & KPI Tracking</div>
-            <div class="card">Advanced Excel (Pivot, Macros)</div>
-            <div class="card">VBA Automation & SQL</div>
-            <div class="card">Power BI & Dashboards</div>
-            <div class="card">Campaign Analytics & ROI</div>
-            <div class="card">Client Reporting & SLA</div>
-        </div>
+        <!-- SKILLS -->
+<section>
+    <h3>Technical & Analytical Skills</h3>
+
+    <div class="grid">
+
+        <!-- Programming & Backend -->
+        <div class="card">Python (Flask Framework)</div>
+        <div class="card">SQL Server & Query Optimization</div>
+        <div class="card">PyODBC Database Connectivity</div>
+        <div class="card">Backend Logic Development</div>
+
+        <!-- Data & Reporting -->
+        <div class="card">Data Processing & Filtering Logic</div>
+        <div class="card">Advanced Excel (Pivot Tables, Macros)</div>
+        <div class="card">VBA Automation (UserForms & Macros)</div>
+        <div class="card">Power BI Dashboards</div>
+
+        <!-- Automation & Business Intelligence -->
+        <div class="card">KPI & SLA Performance Tracking</div>
+        <div class="card">Campaign Analytics & ROI Reporting</div>
+        <div class="card">Report & Workflow Automation</div>
+        <div class="card">Data Validation & Suppression Logic</div>
+
+        <!-- Frontend Basics -->
+        <div class="card">HTML5, CSS3 & JavaScript</div>
+        <div class="card">AJAX File Upload Handling</div>
+
+    </div>
     </section>
 
     <!-- EXPERIENCE -->
@@ -196,6 +215,54 @@
             </div>
 
         </div>
+   
+    <!-- PROJECT 4 -->
+<div class="card project-card">
+    <h4>Data Extraction & ABM Filtering Tool (Flask + SQL Server)</h4>
+    <span>2025 | Personal Development Project</span>
+
+    <p>
+        Designed and developed a full-stack web-based Data Extraction Tool to automate
+        lead filtering, suppression handling, and Excel exports for marketing and sales teams.
+        The application eliminates manual Excel filtering and introduces database-driven
+        processing for higher efficiency and scalability.
+    </p>
+
+    <h5>Core Features</h5>
+    <ul>
+        <li>Multi-country dynamic filtering with search-enabled UI</li>
+        <li>Domain and company-based lead filtering</li>
+        <li>ABM XLSX upload with structured validation</li>
+        <li>Email & domain suppression logic using SQL temporary tables</li>
+        <li>Server-side pagination for handling large datasets</li>
+        <li>One-click export to structured Excel output</li>
+    </ul>
+
+    <h5>Technical Implementation</h5>
+    <ul>
+        <li>Flask backend with dynamic SQL query construction</li>
+        <li>Secure parameterized queries using PyODBC</li>
+        <li>Temporary SQL tables (#tables) for high-performance filtering</li>
+        <li>Excel streaming using OpenPyXL (write-only mode)</li>
+        <li>AJAX-based XLSX upload without page reload</li>
+    </ul>
+
+    <h5>Business Impact</h5>
+    <ul>
+        <li>Reduced manual filtering time significantly</li>
+        <li>Improved data accuracy and campaign targeting</li>
+        <li>Enabled scalable lead extraction beyond Excel limitations</li>
+        <li>Enhanced operational efficiency for marketing workflows</li>
+    </ul>
+
+    <p>
+        This project demonstrates backend development expertise, SQL performance optimization,
+        automation thinking, and the ability to design real-world data processing solutions.
+    </p>
+
+    <span>Tools: Python, Flask, SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
+</div>
+        
     </section>
 
     <!-- FOOTER -->
