Refine project details for Data Extraction Tool
Updated project description and features for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -214,54 +214,37 @@
 
         </div>
    
-    <!-- PROJECT 4 -->
+   <!-- PROJECT 4 -->
 <div class="card project-card">
-    <h4>Data Extraction & ABM Filtering Tool (Flask + SQL Server)</h4>
+    <h4>Data Extraction & ABM Filtering Tool</h4>
     <span>2025 | Personal Development Project</span>
 
     <p>
-        Designed and developed a full-stack web-based Data Extraction Tool to automate
-        lead filtering, suppression handling, and Excel exports for marketing and sales teams.
-        The application eliminates manual Excel filtering and introduces database-driven
-        processing for higher efficiency and scalability.
+        Designed and developed a web-based data extraction and filtering system
+        to automate lead processing, suppression handling, and Excel exports.
+        The solution replaces manual Excel-based filtering with a scalable,
+        database-driven approach for improved efficiency and accuracy.
     </p>
 
-    <h5>Core Features</h5>
     <ul>
-        <li>Multi-country dynamic filtering with search-enabled UI</li>
-        <li>Domain and company-based lead filtering</li>
-        <li>ABM XLSX upload with structured validation</li>
-        <li>Email & domain suppression logic using SQL temporary tables</li>
+        <li>Dynamic multi-country filtering with searchable interface</li>
+        <li>Domain & company-based lead filtering logic</li>
+        <li>ABM XLSX file upload with structured validation</li>
+        <li>Email and domain suppression using SQL temporary tables</li>
         <li>Server-side pagination for handling large datasets</li>
-        <li>One-click export to structured Excel output</li>
-    </ul>
-
-    <h5>Technical Implementation</h5>
-    <ul>
-        <li>Flask backend with dynamic SQL query construction</li>
-        <li>Secure parameterized queries using PyODBC</li>
-        <li>Temporary SQL tables (#tables) for high-performance filtering</li>
-        <li>Excel streaming using OpenPyXL (write-only mode)</li>
-        <li>AJAX-based XLSX upload without page reload</li>
-    </ul>
-
-    <h5>Business Impact</h5>
-    <ul>
-        <li>Reduced manual filtering time significantly</li>
-        <li>Improved data accuracy and campaign targeting</li>
-        <li>Enabled scalable lead extraction beyond Excel limitations</li>
-        <li>Enhanced operational efficiency for marketing workflows</li>
+        <li>One-click export of filtered data into Excel format</li>
     </ul>
 
     <p>
-        This project demonstrates backend development expertise, SQL performance optimization,
-        automation thinking, and the ability to design real-world data processing solutions.
+        This project demonstrates strong backend development, SQL optimization,
+        automation-driven thinking, and the ability to build real-world
+        data processing tools that improve marketing and operational workflows.
     </p>
 
-    <span>Tools: Python, Flask, SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
+    <span>Tools: Python (Flask), SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
 </div>
-        
-    </section>
+
+ </section>
 
     <!-- FOOTER -->
     <footer>
