--- a/index.html
+++ b/index.html
@@ -214,35 +214,50 @@
 
         </div>
    
-   <!-- PROJECT 4 -->
+ <!-- PROJECT 4 -->
 <div class="card project-card">
+
     <h4>Data Extraction & ABM Filtering Tool</h4>
     <span>2025 | Personal Development Project</span>
 
     <p>
-        Designed and developed a web-based data extraction and filtering system
-        to automate lead processing, suppression handling, and Excel exports.
-        The solution replaces manual Excel-based filtering with a scalable,
-        database-driven approach for improved efficiency and accuracy.
+        Designed and developed a web-based data extraction and filtering
+        application to automate lead processing, suppression handling,
+        and structured Excel exports. The system replaces manual
+        spreadsheet filtering with a scalable, database-driven solution
+        to improve efficiency, accuracy, and campaign readiness.
     </p>
 
+    <h5>Process Flow</h5>
     <ul>
-        <li>Dynamic multi-country filtering with searchable interface</li>
-        <li>Domain & company-based lead filtering logic</li>
-        <li>ABM XLSX file upload with structured validation</li>
-        <li>Email and domain suppression using SQL temporary tables</li>
-        <li>Server-side pagination for handling large datasets</li>
-        <li>One-click export of filtered data into Excel format</li>
+        <li>User applies country, domain, or company-based filters</li>
+        <li>Optional ABM XLSX file is uploaded for inclusion/suppression logic</li>
+        <li>Flask backend builds dynamic SQL queries securely</li>
+        <li>Temporary SQL tables apply domain and email suppression</li>
+        <li>Filtered results are displayed with server-side pagination</li>
+        <li>Final data can be exported instantly to Excel format</li>
+    </ul>
+
+    <h5>Key Benefits</h5>
+    <ul>
+        <li>Significant reduction in manual Excel filtering time</li>
+        <li>Improved campaign targeting accuracy</li>
+        <li>Secure and optimized database-level filtering</li>
+        <li>Scalable solution for handling large lead datasets</li>
+        <li>Clean and structured export-ready outputs</li>
     </ul>
 
     <p>
-        This project demonstrates strong backend development, SQL optimization,
-        automation-driven thinking, and the ability to build real-world
-        data processing tools that improve marketing and operational workflows.
+        This project demonstrates backend development skills,
+        SQL optimization, automation-driven thinking, and the
+        ability to build real-world data processing systems that
+        enhance marketing and operational workflows.
     </p>
 
     <span>Tools: Python (Flask), SQL Server, PyODBC, OpenPyXL, HTML, CSS, JavaScript</span>
+
 </div>
+
 
  </section>
 
